helm/manifests/websocket-gateway/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: websocket-gateway
  namespace: websocket-gateway
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - "websocket.proiectpcd.online"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ws
      backendRefs:
        - name: websocket-gateway
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /notify
      backendRefs:
        - name: websocket-gateway
          port: 8080
